Remove text animation on ios because it has some weird display issues :(

--- a/src/routes/Contact/ContactView.scss
+++ b/src/routes/Contact/ContactView.scss
@@ -22,6 +22,10 @@
   transform: translateY(20px);
   transition: opacity 1s, transform 1s;
 
+  > * {
+    text-decoration: none;
+  }
+
   &.active {
     opacity: 1;
     transform: none;
